test/fail/unfinished_comment_2.min
program start
$ Finished comment $ Outside comment $ Unfinished comment
end
